--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -7,6 +7,25 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     //- link(rel='stylesheet', href='/public/bootstrap/css/bootstrap.min.css')
   body
-    block content
+    .navbar.navbar-default.navbar-fixed-top
+      .container
+        .navbar-header
+          a.navbar-brand(href='/') Loc8r
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+        #navbar-main.navbar-collapse.collapse 
+          ul.nav.navbar-nav
+            li
+              a(href='/about/') About
+
+    .container
+      block content
+
+      footer
+        .row
+          .col-xs-12
+            small &copy;Shantanu Patel 2025
   script(src='/javascripts/jquery-3.7.1.min.js')
   script(src='/bootstrap/js/bootstrap.min.js')
