--- a/app_server/views/locations-list.jade
+++ b/app_server/views/locations-list.jade
@@ -8,6 +8,58 @@ block content
           small &nbsp;Find places to work with wifi near you!
   .row
     .col-xs-12.col-sm-8
-      p List area.
+      .row.list-group
+        .col-xs-12.list-group-item.rounded
+          h4
+            a(href='/location') Starcups
+            small &nbsp;
+              span.glyphicon.glyphicon-star
+              span.glyphicon.glyphicon-star
+              span.glyphicon.glyphicon-star
+              span.glyphicon.glyphicon-star-empty
+              span.glyphicon.glyphicon-star-empty
+            span.badge.pull-right.badge-default 100m
+          p.address 125 High Street, Reading, RG6 1PS
+          p
+            span.label.label-warning Hot drinks
+            &nbsp;
+            span.label.label-warning Food
+            &nbsp;
+            span.label.label-warning Premium wifi
+            &nbsp;
+        .col-xs-12.list-group-item.rounded
+          h4
+            a(href='/location') Cafe Hero
+            small &nbsp;
+              span.glyphicon.glyphicon-star
+              span.glyphicon.glyphicon-star
+              span.glyphicon.glyphicon-star
+              span.glyphicon.glyphicon-star
+              span.glyphicon.glyphicon-star-empty
+            span.badge.pull-right.badge-default 100m
+          p.address 125 High Street, Reading, RG6 1PS
+          p
+            span.label.label-warning Hot drinks
+            &nbsp;
+            span.label.label-warning Food
+            &nbsp;
+            span.label.label-warning Premium wifi
+            &nbsp;
+        .col-xs-12.list-group-item.rounded
+          h4
+            a(href='/location') Berger Queen
+            small &nbsp;
+              span.glyphicon.glyphicon-star
+              span.glyphicon.glyphicon-star
+              span.glyphicon.glyphicon-star-empty
+              span.glyphicon.glyphicon-star-empty
+              span.glyphicon.glyphicon-star-empty
+            span.badge.pull-right.badge-default 250m
+          p.address 125 High Street, Reading, RG6 1PS
+          p
+            span.label.label-warning Food
+            &nbsp;
+            span.label.label-warning Premium wifi
+            &nbsp;
     .col-xs-12.col-sm-4
       p.lead Loc8r helps you find places to work when out and about.
