--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -7,11 +7,4 @@ block content
         h1= title
     .row
       .col-md-6.col-sm-12
-        p
-          | Loc8r was created to help people find places to sit down and get a bit of work done.
-          | <br /><br />
-          | Lorem ipsum dolor sit amet consectetur adipisicing elit. Non natus totam similique dolorum molestiae porro placeat quia iusto. Explicabo quo voluptatem esse nostrum molestiae. Labore consectetur ipsam blanditiis fugiat nostrum.
-          | <br /><br />
-          | Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptates fugit obcaecati omnis mollitia amet delectus! Hic distinctio explicabo voluptas beatae laudantium est, ea repudiandae deserunt illo, numquam ullam iste!
-          | <br /><br />
-          | Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa voluptatum tempore veritatis. Sapiente praesentium odit accusantium soluta et eius, qui nulla repellat culpa beatae, laborum delectus, esse maxime iusto ipsum.
+        p !{(content).replace(/\n/g, '<br />')}
